Fixed spacing issue between first whitebox and navbar

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -56,8 +56,8 @@ ul {
 
 .whiteboxContainer {
   margin: 0 auto 50px;
-  margin-top: 50px;
-  text-align: center; }
+  text-align: center;
+  padding-top: 50px; }
 
 .whitebox {
   display: inline-block;
@@ -134,12 +134,6 @@ ul {
       color: white; }
     .section-solutions .solutions-list li i {
       margin-right: 10px; }
-
-.right-side {
-  width: 50%;
-  margin-left: 50%;
-  height: 100%;
-  background-color: black; }
 
 /* page title */
 .pageTitle {
@@ -269,6 +263,17 @@ ul {
   border-style: solid;
   border-radius: 3px; }
 
+.right-side {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 50%;
+  height: 100%; }
+
+.content-blue .right-side {
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAJUlEQVQIW2NkYGCQBGIQeA6lwRQjPglkhXA2SAcygBtLtARcNwBN0gQHoVU8VwAAAABJRU5ErkJggg==);
+  background-color: #2a438e; }
+
 body {
   font-family: "Open Sans", "Helvetica", Arial, sans-serif;
   font-size: 15px; }
@@ -390,17 +395,6 @@ p {
             transform-origin: top;
     -webkit-transition: -webkit-transform 0.3s ease-out;
             transition: transform 0.3s ease-out; }
-
-.right-side {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  width: 50%;
-  height: 100%; }
-
-.content-blue .right-side {
-  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAJUlEQVQIW2NkYGCQBGIQeA6lwRQjPglkhXA2SAcygBtLtARcNwBN0gQHoVU8VwAAAABJRU5ErkJggg==);
-  background-color: #29418a; }
 
 .navbar {
   margin-bottom: 0;
